# fri_emulator

./: CMakeLists.txt  README.md  encode.cpp  main.cpp
doc/: fri_emulator.rst
include/fri_emulator/: commanding_message_decoder.hpp  monitoring_message_encoder.hpp  state_machine.hpp  udp_server.hpp  virtual_hardware.hpp
src/: commanding_message_decoder.cpp  monitoring_message_encoder.cpp  state_machine.cpp  udp_server.cpp  virtual_hardware.cpp
